--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -86,5 +86,17 @@ p{
         padding: 0;
       }
     }
+    &.img-content{
+      .row{
+        margin-bottom: 30px;
+      }
+      img{
+        width: 100%;
+        margin-top: 0;
+        &.img-small{
+          width: 80%;
+        }
+      }
+    }
   }
 }
