--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,19 @@ p{
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.btn-green{
+  background-color: $green;
+  color: #fff;
+  margin: 0 auto;
+  display: block;
+  padding:10px 35px;
+  border-radius: 30px;
+}
+.badges{
+  display: block;
+  width: 90%!important;
+  max-height: 56px;
+}
 .wrapper{
   background-color: #fff;
   border-radius: 10px;
@@ -62,9 +75,7 @@ p{
       margin-bottom: 10px;
     }
   }
-  .badges{
-      display: block;
-  }
+
   .content{
     padding-top: 50px;
     h2{
@@ -75,7 +86,7 @@ p{
       margin-top: 25px;
     }
     &.text-content{
-          width: 100%;
+      width: 100%;
       h3{
         font-size: 20px;
         text-align: left;
@@ -95,8 +106,30 @@ p{
         margin-top: 0;
         &.img-small{
           width: 80%;
+          float: right;
         }
+      }
+    }
+    &.idea-content{
+      p{
+        &.idea-text{
+          padding: 10px 0;
+          font-weight: 700;
+        }
+      }
+      span{
+        color: #c6c6c6;
+      }
+    }
+    &.lemi-content{
+      width: 80%;
+      margin: 0 auto;
+      display: block;
+      p{
+        padding: 0 20px;
+        font-weight: 700;
       }
     }
   }
 }
+@import 'footer';
